--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -1,8 +1,13 @@
 main .carousel-container {
   padding: 0;
   width: 100%;
-  height: calc(100vh - var(--nav-height));
   background: linear-gradient(to right top, #bebebe, #f7f7f7);
+}
+
+@media (min-width: 900px) {
+  .carousel-container {
+    height: calc(100vh - var(--nav-height) - var(--nav-banner-height) + 4px);
+  }
 }
 
 main .carousel-wrapper {
@@ -17,7 +22,9 @@ main .carousel {
   scroll-behavior: smooth;
   scroll-snap-type: x mandatory;
   height: 100%;
-  overflow-x: hidden;
+
+  /* Required by Safari */
+  overflow-x: auto;
   overflow-y: hidden;
 }
 
@@ -90,7 +97,7 @@ main .carousel img {
 /* carousel slide */
 main .carousel > div {
   display: grid;
-  grid-template-areas: 
+  grid-template-areas:
     'image'
     'text';
   grid-template-rows: 1fr;
@@ -98,6 +105,17 @@ main .carousel > div {
   width: 100%;
   position: relative;
   scroll-snap-align: start;
+}
+
+.carousel-image {
+  background-color: var(--background-color);
+  min-height: calc(50vh - var(--nav-height) - var(--nav-banner-height) + 4px);
+}
+
+@media(min-width: 900px) {
+  .carousel-image {
+    min-height: auto;
+  }
 }
 
 main .carousel div.carousel-image {
@@ -116,12 +134,20 @@ main .carousel div.carousel-text {
   align-content: center;
   justify-content: center;
   grid-area: text;
-  padding: 50px 30px 80px;
+  padding: 2em;
   background-color: rgb(255 255 255 / 100%);
   color: var(--color-white);
   position: relative;
   z-index: 2;
-  max-height: 50vh;
+}
+
+@media(min-width: 900px) {
+  .carousel-text p.is-truncated {
+    overflow: hidden;
+    display: -webkit-box;/* stylelint-disable-line */
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+  }
 }
 
 @media(min-width: 900px) {
@@ -148,25 +174,25 @@ div.carousel-text h1, div.carousel-text h2 {
 main .carousel div.carousel-text h2 {
   flex-basis: 100%;
 }
-  
+
 /*
 @media (min-width: 700px) {
   main .carousel div.carousel-text {
     padding: 0 30px;
   }
 }
-  
+
 @media (min-width: 900px) {
   main .carousel div.carousel-text {
     justify-content: flex-end;
   }
-  
+
   main .carousel div.carousel-text h2 {
     margin-right: 30%;
     margin-bottom: 0;
   }
 }
-*/  
+*/
 
 /*
 @media (min-width: 1200px) {
@@ -174,7 +200,7 @@ main .carousel div.carousel-text h2 {
     padding: 0 60px;
   }
 }
-*/  
+*/
 
 div.carousel-text p {
   font-size: 16px;
@@ -182,7 +208,7 @@ div.carousel-text p {
   letter-spacing: 0.020em;
   text-align: left;
 }
-  
+
 div.carousel-text p:first-of-type {
   color: var(--link-color);
   font-size: 18px;
@@ -210,7 +236,6 @@ div.carousel-text p:first-of-type {
 /* carousel content buttons */
 main .carousel p.button-container {
   width: 100%;
-  margin-left: 15px;
   font-weight: lighter;
   text-align: left;
 }
@@ -258,10 +283,18 @@ main .carousel-wrapper .carousel-buttons {
   display: flex;
   justify-content: right;
   position: absolute;
-  right: 1em;
+  left: 0;
+  margin-left: 2em;
   bottom: 1em;
   text-align: center;
   z-index: 3;
+}
+
+@media (min-width: 900px) {
+  main .carousel-wrapper .carousel-buttons {
+    left: 200px;
+    bottom: 2em;
+  }
 }
 
 main .carousel-buttons button {
@@ -422,44 +455,19 @@ main .carousel.gallery div.gallery-text p.gallery-text-credit {
   float: left;
 }
 
-.carousel-wrapper .carousel-next::after {
-  content: "";
-  border:1px solid black;
-  transform: rotate(-45deg);
-  display: inline-block;
-  height: 12px;
+.carousel-wrapper :is(.carousel-prev, .carousel-next) svg {
+  height: 40px;
+  width: 40px;
+  position: relative;
+}
+
+.carousel-wrapper .carousel-prev svg {
+  transform: rotate(180deg);
+  left: -10px;
   top: -2px;
-  position: relative;
 }
 
-.carousel-wrapper .carousel-next::before {
-  content: "";
-  border:1px solid black;
-  transform: rotate(45deg);
-  top: 7px;
-  left: 2px;
-  display: inline-block;
-  height: 12px;
-  position: relative;
-}
-
-.carousel-wrapper .carousel-prev::after {
-  content: "";
-  border:1px solid black;
-  transform: rotate(45deg);
-  display: inline-block;
-  height: 12px;
+.carousel-wrapper .carousel-next svg {
   top: -2px;
-  position: relative;
-}
-
-.carousel-wrapper .carousel-prev::before {
-  content: "";
-  border:1px solid black;
-  transform: rotate(-45deg);
-  top: 7px;
-  left: 2px;
-  display: inline-block;
-  height: 12px;
-  position: relative;
+  left: 5px;
 }
