--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,10 +40,12 @@
 
   /* nav height mobile */
   --nav-height: 40px;
+  --nav-banner-height: 40px;
 }
 
 main {
   font-size: 0;
+  margin-top: calc(var(--nav-banner-height) - 4px);
 }
 
 body {
@@ -84,7 +86,7 @@ h6 { font-size: var(--heading-font-size-xs) }
 }
 
 .section.carousel-container ~ .section h2 {
-  /* 
+  /*
    * h2s look different on the home page (no border). Instead of selecting
    * via page metadata (e.g. `theme: home`), we use the carousel-container
     * as a proxy for the home page.
@@ -130,7 +132,7 @@ a.button:any-link, button {
   border: 2px solid transparent;
   padding: 5px 30px;
   text-align: center;
-  font-style: normal; 
+  font-style: normal;
   font-weight: 600;
   cursor: pointer;
   color: var(--background-color);
@@ -156,7 +158,7 @@ a.button.secondary, button.secondary {
   background-color: unset;
   border: 2px solid currentcolor;
   color: var(--text-color)
-} 
+}
 
 
 main input {
@@ -165,7 +167,7 @@ main input {
   max-width: 50rem;
   display: block;
   margin-bottom: 1rem;
-  padding: 0.75rem 0.6rem;    
+  padding: 0.75rem 0.6rem;
   border-radius: 0.25rem;
   box-sizing: border-box;
   border: 1px solid var(--text-color);
@@ -232,7 +234,7 @@ main > .section > .default-content-wrapper > p > picture > img {
 @media (min-width: 600px) {
   main .section {
     padding: 64px 32px;
-  }  
+  }
 }
 
 @media (min-width: 900px) {
@@ -242,9 +244,9 @@ main > .section > .default-content-wrapper > p > picture > img {
     --heading-font-size-l: 32px;
     --heading-font-size-m: 30px;
     --heading-font-size-s: 24px;
-    --heading-font-size-xs: 22px;  
+    --heading-font-size-xs: 22px;
   }
-  
+
   .section > div {
     max-width: 1200px;
     margin-left: auto;
@@ -261,7 +263,7 @@ main > .section > .default-content-wrapper > p > picture > img {
 header {
   height: var(--nav-height);
 }
-  
+
 /* progressive section appearance */
 main .section[data-section-status='loading'],
 main .section[data-section-status='initialized'] {
